--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,7 +173,7 @@ body.light-theme{
 .light-theme .work__card,
 .light-theme .testimonial__card,
 .light-theme .contact__card{
-  box-shadow: 0 2px 16px hsl(var(--second-hue), 48%, 8%, .1);
+  box-shadow: 0 2px 16px #77bef8;
 }
 
 .light-theme::-webkit-scrollbar-thumb{
